# Graphics-engine

./: .gitignore  CMakeLists.txt  cube.mtl  lamp.frag  main.cpp  screen.frag  shadow_depth.frag  simple_lighting.frag  simple_lighting.vert  skybox.vert  standard.frag
include/: Camera.h  GameObject.h  Mesh.h  Model.h  Shader.h  Texture.h
include/glad/: glad.h
src/: glad.c  stb_image_impl.cpp
